# found_hyperC

./: .gitignore  CMakeLists.txt  Makefile  hc-compress
include/: ccsds123_internal.h  ccsds123_io.h  ccsds123_utils.h  hc_compress.h  hybrid_tables_data.h
src/: ccsds123_cli.c  ccsds123_core.c  ccsds123_io.c  ccsds123_utils.c  hc_compress_api.c
